# nbgn-backend

./: .dockerignore  .gitignore  API_EXAMPLES.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  RUN_GUIDE.md  SECURITY.md  calculate_address.js  check_backend_signer.js  check_backend_signer_match.js  check_contract_signer.sh  check_current_block.js  check_recent_events.js  check_voucher.js  fix-postgres.sh  openapi.yaml  run_tests.sh  setup.sh  start.sh  stop.sh  test_claim.sh  test_signature_format.js
config/: default.toml
migrations/: 20240121000003_add_claim_tx_status.sql  20240320000001_initial_schema.sql  20240320000002_voucher_system.sql
scripts/: generate_wallet.rs
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  voucher_routes.rs
src/contracts/: errors.rs  mod.rs  nbgn.rs
src/db/: mod.rs  models.rs  voucher_models.rs
src/middleware/: rate_limiter.rs
src/services/: cache.rs  event_indexer.rs  indexer.rs  mod.rs  voucher.rs
static/: swagger.html
tests/: async_integration_tests.rs  integration_tests.rs  simple_integration_test.rs  simple_test.rs  simple_unit_test.rs  test_utils.rs  unit_tests.rs
