[package]
name = "nbgn-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-ws = "0.2"
actix-rt = "2"
actix-cors = "0.6"

# Ethereum/blockchain
ethers = { version = "2", features = ["ws", "rustls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Futures
futures-util = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
hex = "0.4"
dotenv = "0.15"
argon2 = "0.5"
rand = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
actix-rt = "2"
serial_test = "3.0"
wiremock = "0.6"
